--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>selenium-archetype</groupId>
 	<artifactId>selenium-archetype</artifactId>
@@ -18,8 +19,8 @@
 	</developers>
 	<scm>
 		<connection>scm:git:git@github.com:julianopontes/selenium-archetype.git</connection>
-	  <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 	<ciManagement>
 		<system>Jenkins</system>
 		<url>http://192.168.16.110:8080/deploy</url>
@@ -27,7 +28,7 @@
 	<distributionManagement>
 		<repository>
 			<id>nexus</id>
-			<url>http://office-sp.dclick.com.br/nexus/content/groups/public</url>
+			<url>http://office-sp.dclick.com.br/nexus/content/repositories/releases</url>
 		</repository>
 		<snapshotRepository>
 			<id>nexus</id>
