--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,15 @@
 		<system>Jenkins</system>
 		<url>http://192.168.16.110:8080/deploy</url>
 	</ciManagement>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
+		</plugins>
+	</build>
 	<distributionManagement>
 		<snapshotRepository>
 			<id>nexus</id>
